--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,23 @@ dependencies {
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    // Unit Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // Anko
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
-    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // Image Processor
+    implementation "com.squareup.picasso:picasso:$picasso_version"
+
+    // Parser
+    implementation "com.google.code.gson:gson:$gson_version"
+
 }
 
 androidExtensions {
