--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     ext.kotlin_version = '1.2.71'
     ext.anko_version = '0.10.5'
     ext.support_version = "28.0.0"
+    ext.gson_version = '2.8.5'
+    ext.picasso_version = '2.71828'
 
     repositories {
         google()
