--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
     // image
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+    implementation "com.squareup.picasso:picasso:$rootProject.picassoVersion"
 
     // parser
     implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
