--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ ext {
     rxjava2Version = '2.0.6'
     rxandroidVersion = '2.0.2'
     ankoVersion = "0.10.7"
+    picassoVersion = '2.71828'
 
     //Test dependencies
     junitVersion = '4.12'
